--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,12 @@
-# Node modules
+# Dependencies
 node_modules/
+/.pnp
+.pnp.js
 
-# Build output
-dist/
-build/
-
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Dependency directories
-jspm_packages/
-
-# IDE files
-.vscode/
-.idea/
+# Production build
+/build
+/dist
+/out
 
 # Environment variables
 .env
@@ -26,10 +15,29 @@ jspm_packages/
 .env.test.local
 .env.production.local
 
-# Tailwind CSS generated files
-tailwind.config.js
-postcss.config.js
+# Cache and logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.cache/
+.npm/
 
-# React specific files
-*.jsx
-*.tsx
+# Editor and IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
+
+# Testing
+/coverage
+
+# Tailwind CSS
+/tailwind.output.css
+
+# Misc
+*.log
+*.bak
+*.tmp
+*.temp
