--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jiti": "^1.21.6",
     "lilconfig": "^2.1.0",
     "lines-and-columns": "^1.2.4",
+    "logrocket": "^9.0.2",
     "lru-cache": "^10.4.3",
     "merge2": "^1.4.1",
     "micromatch": "^4.0.8",
